Closed
Bug 170774
Opened 23 years ago
Closed 23 years ago
crash loading "javascript:window.close()" [@ objc_msgSend]
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Chimera0.6
People
(Reporter: kaldari, Assigned: mikepinkerton)
References
()
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
I get a fairly consistant crash when clicking on a button that submits a form
and opens a new window. I will attach the stack trace of the crash.
I'm using build 2002092404 with OS 10.2.1.
Assignee | ||
Comment 3•23 years ago
|
||
url?!
I don't have a very good URL for you, but here's the one I'm getting the crash
at. You'll have to sign-up for an account, add a Page Builder to your account,
add an element into the page builder, and click "View my Web Tool". I'll see if
I can come up with a better testcase for you. BTW, I have confirmed the bug
still exists in build 2002092504.
It turns out the crash is not related to the pop-up window, rather it occurs
simply on loading a new page (any page). The crash does not happen in build
2002090913 (0.5 official release), only newer nightlies.
Here are the steps to reproduce the crash:
1. go to www.sitemason.com.
2. log in as user "crash", password "crash".
3. click on "I will crash Chimera".
4. Click on the "Edit Elements" tab.
5. Click on the "Edit" button next to the test paragraph.
6. In the window that pops-up click "Save". This will close the pop-up window.
7. Select another site from your bookmarks or enter another site's URL in the
address bar and hit return (or click the "View My Webtool" button).
This is where Chimera crashes. I haven't been able to come up with a better
testcase yet, but I'm still working on it.
Summary: crash on pop-up window → crash on loading a new page
Comment 6•23 years ago
|
||
Based on the reporter's steps, I was able to crash after selecting a bookmark to
load a new page. Tested with the 2002-09-26-04 NB under 10.2.1.
Comment 7•23 years ago
|
||
I 've tested the nightlies between 9/18 and today to try to isolate when the bug was
introduced. The 9/20 build seems to be the first one that crashes, although 9/18 and 9/19
give me the spinning technicolor pizza of death instead (from which I have to force quit).
Here's a summary of my tests so far:
9/09: works fine
9/10 - 9/17: untested
9/18: pizza of death
9/19: pizza of death
9/20 - 9/25: crashes
Summary: crash on loading a new page → crash on loading a new page [@ objc_msgSend]
I think I've figured out what's causing this crash: self-closing windows. If you
load a page similar to the following:
<html>
<body onLoad="javascript:window.close();"></body>
</html>
Chimera usually crashes immediately. If not immediately, it should crash as soon
as you try to load a new page. I've created a new URL where you can try this
out: http://www.angelblade.com/crasher.html
Assignee | ||
Comment 10•23 years ago
|
||
so i think the right way to fix this is to partially undo a previous fix of mine
to make sure we kill gecko when closing the window, but continue to allow the
controller to autorelease.
Status: NEW → ASSIGNED
Summary: crash on loading a new page [@ objc_msgSend] → crash loading "javascript:window.close()" [@ objc_msgSend]
Target Milestone: --- → Chimera0.6
Assignee | ||
Comment 11•23 years ago
|
||
fixed. the issue was bad refcounting of the progress strings for the status bar.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 12•23 years ago
|
||
I have verified that this bug is fixed in the 2002101004 build. Thanks Mike!
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ objc_msgSend]
You need to log in
before you can comment on or make changes to this bug.
Description
•