Fix crash with window.close() caused by bad refcounting of the progress strings. Moved BWC back to being autoreleased, but now shutting down gecko in windowDidClose. Moved "Document:Done" string to localizable.strings so it can be localized. (bug 170774)